Adler32 vector optimization for Power.
This commit implements a Power (POWER8+) vector optimization for Adler32
checksum using VSX (vector) instructions. The VSX adler32 checksum is up
to 10x fast than the adler32 baseline code.

Author: Rogerio Alves <rcardoso@linux.ibm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,7 +184,7 @@ if(CMAKE_COMPILER_IS_GNUCC)
 
             if(POWER8)
                 add_definitions(-DZ_POWER8)
-                set(ZLIB_POWER8 )
+                set(ZLIB_POWER8 contrib/power/adler32_power8.c)
 
                 set_source_files_properties(
                     ${ZLIB_POWER8}
